@@ -1,7 +1,13 @@
 partman-auto (70) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Move deletion of SVN directories to install-rc script.
   * Improve the way install-rc is called.
+
+  [ Colin Watson ]
+  * Fix divide-by-zero error if the sum of the factors in the scheme is
+    equal to the sum of the minimum sizes, or if we run off the maximum size
+    of the recipe before we run out of disk to allocate.
 
  -- Frans Pop <fjp@debian.org>  Sun, 13 May 2007 04:05:45 +0200
 
